✨ Implemtn patient detail page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Breath r81",
+  "name": "Medical Equipment Delivery System",
   "icons": [
     {
       "src": "favicon.ico",
