--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -57,7 +57,18 @@ http {
         }
 
         location /api/ {
-            client_max_body_size 500M;
+            client_max_body_size 20M;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-NginX-Proxy true;
+            proxy_pass ${RBO_UI_RBO_API_BASE_URL};
+            proxy_ssl_session_reuse off;
+            proxy_cache_bypass $http_upgrade;
+            proxy_redirect off;
+        }
+
+        location /api/document {
+            client_max_body_size 20M;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-NginX-Proxy true;
