--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -67,7 +67,7 @@ http {
             proxy_redirect off;
         }
 
-        location /api/document {
+        location ~ ^/api/document/.*\.(pdf)$ {
             client_max_body_size 20M;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
