--- a/jsconfig.json
+++ b/jsconfig.json
@@ -10,5 +10,8 @@
     "**/CVS": true,
     "**/.DS_Store": true,
     "**/node_modules/": true
+  },
+  "paths": {
+    "shared/*": ["shared/*"]
   }
 }
